# sww-magnetic-validation-pipeline

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  cif_to_csv.py  environment.yml  pyproject.toml  run_validation.sh  thresholds.yaml
config/: thresholds.yaml  train_reference.csv
datasets/concdvae/: train_reference.csv
datasets/raw_data/: raw_to_dataset.py
samples/concdvae_cifs/: eval_gen_FM0_0006.cif  eval_gen_FM0_0007.cif  eval_gen_FM0_0008.cif  eval_gen_FM0_0009.cif  eval_gen_FM0_0010.cif  eval_gen_FM0_0011.cif  eval_gen_FM0_0012.cif  eval_gen_FM0_0013.cif  eval_gen_FM0_0014.cif  eval_gen_FM0_0015.cif  eval_gen_FM0_0016.cif  eval_gen_FM0_0017.cif  eval_gen_FM0_0018.cif  eval_gen_FM0_0019.cif  eval_gen_FM0_0020.cif  eval_gen_FM0_0021.cif  eval_gen_FM0_0022.cif  eval_gen_FM0_0023.cif  eval_gen_FM0_0024.cif  eval_gen_FM0_0025.cif  eval_gen_FM0_0026.cif  eval_gen_FM0_0027.cif  eval_gen_FM0_0028.cif  eval_gen_FM0_0029.cif  eval_gen_FM0_0030.cif  eval_gen_FM0_0031.cif  eval_gen_FM0_0032.cif  eval_gen_FM0_0033.cif  eval_gen_FM0_0034.cif  eval_gen_FM0_0035.cif  eval_gen_FM0_0036.cif  eval_gen_FM0_0037.cif  eval_gen_FM0_0038.cif  eval_gen_FM0_0039.cif  eval_gen_FM0_0040.cif  eval_gen_FM0_0041.cif  eval_gen_FM0_0042.cif  eval_gen_FM0_0043.cif  eval_gen_FM0_0044.cif  eval_gen_FM0_0045.cif  (+268 more)
samples/crystalformer_cifs/: output_123_row00106.cif  output_123_row00107.cif  output_123_row00108.cif  output_123_row00109.cif  (+1248 more)
scripts/: run_docker.sh
src/: cli.py
train_ref/: train_reference_crystalformer.csv  train_reference_mattergen.csv
(+344 files in other folders)
